feat: add CORS configuration to api-gateway for production domain